--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,6 +8,16 @@ html
 
     body
         container
+            div.row.center-align
+                div.col.s6.card#player1status
+                    h1.card-title Player 1:
+                    h3.card-content
+                div.col.s6.card#player2status
+                    h1.card-title Player 2:
+                    h3.card-content
+            div.row.center-align
+                div.col.s12.card#startGame
+                    h4.card-content Start Game
             div.row
                 div.col.s2.card#header1
                     h4.card-content.white-text HTML
@@ -22,85 +32,91 @@ html
                 div.col.s2.card#header6
                     h4.card-content.white-text JQUERY
             div.row
-                btn.col.s2.card#cat1_level200
+                btn.col.s2.card#HTML_200
                     h3.card-content.white-text $200
-                div.col.s2.card#cat2_level200
+                div.col.s2.card#CSS_200
                     h3.card-content.white-text $200
-                div.col.s2.card#cat3_level200
+                div.col.s2.card#JS_200
                     h3.card-content.white-text $200
-                div.col.s2.card#cat4_level200
+                div.col.s2.card#PUG_200
                     h3.card-content.white-text $200
-                div.col.s2.card#cat5_level200
+                div.col.s2.card#SCSS_200
                     h3.card-content.white-text $200
-                div.col.s2.card#cat6_level200
+                div.col.s2.card#JQUERY_200
                     h3.card-content.white-text $200
 
             div.row
-                div.col.s2.card#cat1_level400
+                div.col.s2.card#HTML_400
                     h3.card-content.white-text $400
-                div.col.s2.card#cat2_level400
+                div.col.s2.card#CSS_400
                     h3.card-content.white-text $400
-                div.col.s2.card#cat3_level400
+                div.col.s2.card#JS_400
                     h3.card-content.white-text $400
-                div.col.s2.card#cat4_level400
+                div.col.s2.card#PUG_400
                     h3.card-content.white-text $400
-                div.col.s2.card#cat5_level400
+                div.col.s2.card#SCSS_400
                     h3.card-content.white-text $400
-                div.col.s2.card#cat6_level400
+                div.col.s2.card#JQUERY_400
                     h3.card-content.white-text $400
 
 
             div.row
-                div.col.s2.card#cat1_level600
+                div.col.s2.card#HTML_600
                     h3.card-content.white-text $600
-                    a.btn.modal-trigger(href="#modal1") Modal
-                div.col.s2.card#cat2_level600
+                    //a.btn.modal-trigger(href="#modal1") Modal
+                div.col.s2.card#CSS_600
                     h3.card-content.white-text $600
-                div.col.s2.card#cat3_level600
+                div.col.s2.card#JS_600
                     h3.card-content.white-text $600
-                div.col.s2.card#cat4_level600
+                div.col.s2.card#PUG_600
                     h3.card-content.white-text $600
-                div.col.s2.card#cat5_level600
+                div.col.s2.card#SCSS_600
                     h3.card-content.white-text $600
-                div.col.s2.card#cat6_level600
+                div.col.s2.card#JQUERY_600
                     h3.card-content.white-text $600
 
             div.row
-                div.col.s2.card#cat1_level800
+                div.col.s2.card#HTML_800
                     h3.card-content.white-text $800
-                div.col.s2.card#cat2_level800
+                div.col.s2.card#CSS_800
                     h3.card-content.white-text $800
-                div.col.s2.card#cat3_level800
+                div.col.s2.card#JS_800
                     h3.card-content.white-text $800
-                div.col.s2.card#cat4_level800
+                div.col.s2.card#PUG_800
                     h3.card-content.white-text $800
-                div.col.s2.card#cat5_level800
+                div.col.s2.card#SCSS_800
                     h3.card-content.white-text $800
-                div.col.s2.card#cat6_level800
+                div.col.s2.card#JQUERY_800
                     h3.card-content.white-text $800
 
             div.row
-                div.col.s2.card#cat1_level1000
+                div.col.s2.card#HTML_1000
                     h3.card-content.white-text $1000
-                div.col.s2.card#cat2_level1000
+                div.col.s2.card#CSS_1000
                     h3.card-content.white-text $1000
-                div.col.s2.card#cat3_level1000
+                div.col.s2.card#JS_1000
                     h3.card-content.white-text $1000
-                div.col.s2.card#cat4_level1000
+                div.col.s2.card#PUG_1000
                     h3.card-content.white-text $1000
-                div.col.s2.card#cat5_level1000
+                div.col.s2.card#SCSS_1000
                     h3.card-content.white-text $1000
-                div.col.s2.card#cat6_level1000
+                div.col.s2.card#JQUERY_1000
                     h3.card-content.white-text $1000
 
         div.modal#modal1
-            div.modal-content
-                h4 Modal Header
-                p A bunch of text
-            div.modal-footer
-                a.modal-action.modal-close.waves-effect.waves-green.btn-flat(href="#") Agree
+            div.modal-content.center-align
+                h1#modal-header Modal Header
+                h3#modal-question default
+                hr
+                h5.button.waves-effect.waves-light.btn.btnAnswer#q1
+                h5.button.waves-effect.waves-light.btn.btnAnswer#q2
+                h5.button.waves-effect.waves-light.btn.btnAnswer#q3
 
-
+        div.modal#modal2
+            div.modal-content.center-align
+                h4#modal-player-status
+                hr
+                H4#modal-player-score
 
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js")
