added Game Won functionality and modal window

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -130,6 +130,15 @@ html
                 hr
                 h3#startInstructions Enter your names and choose a card!
 
+        div.modal#endOfGameModal
+            div.modal-content.center-align
+                h2 WINNER!
+                h3#winnerDisplayPlayer
+                hr
+                h3#winnerDisplayScore
+
+
+
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js")
         script(src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js")
