--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -128,6 +128,9 @@ pre{
   background-color: #e51c23;
   color:white;
   position: fixed;
-  top: 0;
-  right: 0;
+  z-index: 20;
+  top: 10;
+  right: 10;
+  @extend .z-depth-4;
+
 }
