swapped Jeopardy img for gyparody font

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,8 +7,7 @@ html
         link(rel="stylesheet" href='css/app.css')
 
     body
-        div.container.center-align
-            img(src="images/Giant_Jeopardy_Logo.png").header-logo
+        header.center-align WEB DEV JEOPARDY!
 
         div.container
             div.row.center-align
