--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'style';
 @font-face {
   font-family: 'gyparody';
-  src: url('fonts/gyparody/gyparody hv.ttf');
+  src: url('../fonts/gyparody_rg.ttf');
 }
 
 //$JeopardyPurple: #311b92;
@@ -51,6 +51,7 @@ header{
 
 .chip{
   background-color: #8bc34a;
+  font-size: 20px;
 }
 
 .col{
@@ -93,6 +94,7 @@ header{
       margin: 5px;
       display: block !important;
       margin-top: 10px;
+      text-wrap: normal;
     }
   }
 }
@@ -115,7 +117,7 @@ header{
 }
 
 code {
-  text-align:center;
+  text-align:left;
   color:white;
   font-size: 1em;
   margin-left: 10px;
@@ -123,7 +125,7 @@ code {
 }
 
 pre{
-  text-align: left;
+  text-align: center;
   background-color: $codeBox;
   border: 20px solid black;
 
